# Orzabal

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md
src/: CMakeLists.txt  client  main.c  sine  sine.cpp
src/assets/: orzabal.xcf
src/backend/: CMakeLists.txt
src/backend/Audio/: CMakeLists.txt  Jack.cpp  Jack.h
src/backend/Midi/: ALSA.cpp  ALSA.h  CMakeLists.txt  Host.h  Jack.cpp  Jack.h  Plugin.h
src/backend/Plugin/: CMakeLists.txt  Effect.h  Element.h  Instrument.h
src/backend/Server/: CMakeLists.txt  JackServer.cpp  JackServer.h  Server.h
src/backend/midi/: ALSA.cpp
src/backend/server/: JackServer.cpp  JackServer.h  Server.h
src/cli/: .gitignore  App.cpp  App.h  CMakeLists.txt  PluginList.cpp  PluginList.h  PluginLoader.cpp  PluginLoader.h  completion.sh.in
src/cli/Main/: main.cpp
src/common/: CMakeLists.txt  Common.h  Version.h
src/common/ALSA/: ALSA.cpp  ALSA.h
src/common/Audio/: .gitignore  CMakeLists.txt  ControlInterface.h  Host.h  MidiControlRange.h  Patchbay.h  PatchbayPresetLoader.h  PatchbayPresetWriter.h  PlayState.h  Plugin.h  PluginPortContainer.h  PluginRepository.h  Port.h  Preset.h  Search.h  Server.h  Types.h  UI.cpp  UI.h  UIDriver.cpp  UIDriver.h
src/common/Audio/Config/: Config.h.in
src/common/Config/: Config.h  Config.h.in  PluginTypes.h  PluginTypes.h.in
src/common/GUI/: AbstractWindow.h
src/common/Jack/: CMakeLists.txt  Host.cpp  Host.h  Midi.cpp  Midi.h  MidiEvent.h  Patchbay.cpp  Patchbay.h  PatchbayEffects.cpp  PatchbayEffects.h  PatchbayEffectsOutput.h  Plugin.cpp  Plugin.h  PluginRepository.h  Port.h  Server.cpp  Server.h  ServerStandalone.cpp  ServerStandalone.h  StereoHostInterface.cpp  StereoHostInterface.h
src/common/Jack/Events/: BufferEvent.cpp  BufferEvent.h  LatencyEvent.cpp  LatencyEvent.h  PortRegistrationData.h  RedirectionEvent.cpp  RedirectionEvent.h  RedirectionEventStereo.cpp  RedirectionEventStereo.h  UpdateEvent.cpp  (+1 more)
src/common/LADSPA/: CMakeLists.txt  LADSPAPlugin.cpp  LADSPAPlugin.h  LADSPAPort.h  LADSPASearch.cpp  LADSPASearch.h  ladspa.h  ladspalist  ladspalist.c  ladspalist.cpp  search.c  types.h
src/common/LV2/: CMakeLists.txt  CallbackEvent.cpp  CallbackEvent.h  ControlChange.h  Host.cpp  Host.h  JackCallbackEvent.cpp  JackCallbackEvent.h  Plugin.cpp  Plugin.h  PluginPreset.cpp  PluginPreset.h  PluginState.cpp  PluginState.h  PluginWorker.cpp  PluginWorker.h  Port.h  Preset.h  Repository.cpp  Repository.h  Search.cpp  Search.h  UI.cpp  UI.h  WindowLayout.cpp  WindowLayout.h  gabrielo-common-lv2  lilv_config.h  lv2ls.c
src/common/Midi/: CMakeLists.txt  Control.h  Control.h.in  Device.h  Events.h  Frequency.h  Note.h  Note.h.in  Port.h
src/common/Network/: CMakeLists.txt  Manager.cpp  Manager.h  Network.h
src/common/PluginSearch/: CMakeLists.txt  LoadedPlugins.cpp  LoadedPlugins.h
src/common/Util/: Dispatcher.h  File.h  JSON.h  Logger.h  Random.h  Repository.h  String.h  Vector.h
src/gui/: AbstractAbout.h  AbstractDropdown.h  AbstractElement.h  CMakeLists.txt  GUI.h
src/pi/: .gitignore  CMakeLists.txt  MainPinSetup.cpp  Pin.cpp  Pin.h  PinRepository.cpp  PinRepository.h  startup.sh.in  vnc_install.sh.in  vnc_startup.desktop  vnc_startup.sh  vnc_startup.sh.in  vnc_stop.sh.in
src/pi/Config/: Commands.h  Commands.h.in  Defaults.h.in
src/pi/Resource/: effect_pin_layout.json  odroid-c2_800x600.json
src/qt/: .gitignore  About.qml  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.ui.autosave  Resources.qrc  Resources.qrc.depends  about.ui  gabrielo.pro  main.cpp  moc_InstrumentDropdown.cpp  orzabal.pro  orzabal.pro.user.ee0c41a.4.8-pre1  orzabal.qt.desktop  qrc_Resources.cpp
src/qt/Config/: BuildType.h  BuildType.h.in  Defaults.h  Defaults.h.in
src/qt/LV2/: ControlChange.h  IOPortChanger.cpp  IOPortChanger.h  PluginArea.ui  PortContainer.h  PresetDropdown.cpp  PresetDropdown.h  UIDriver.cpp  UIDriver.h  WindowLayout.cpp  WindowLayout.h
src/qt/Layouts/: Layout.h  LayoutLoader.cpp  LayoutLoader.h  LayoutRepository.h  LayoutWriter.h
src/qt/MidiControl/: Control.cpp  Control.h  Control.ui  ControlPort.cpp  ControlPort.h  ControlPort.ui  ControlPortValue.cpp  ControlPortValue.h  ControlPortValue.ui  ControlTab.h
src/qt/Pad/: PadTab.cpp  PadTab.h
src/qt/Pi/: Layout.cpp  Layout.h  PiTab.ui  PiTab_copy.ui  TouchscreenInput.h
src/qt/Resource/: Icons.cpp  Icons.h
src/qt/Settings/: ControlTab.cpp  ControlTab.h  InstrumentPresetLoader.cpp  InstrumentPresetLoader.h  InstrumentPresetWriter.cpp  InstrumentPresetWriter.h  Layout.cpp  Layout.h  MidiDeviceDropdown.cpp  MidiDeviceDropdown.h  OutputDropdown.cpp  OutputDropdown.h  PresetDropdown.h
src/qt/Styles/: DarkStyle.qss  MainStyle.qss
src/qt/UI/: About.ui  PatchBay.ui  SettingsForm.ui
src/qt/Widget/: AbstractDropdown.h  AbstractIODropdown.h  AbstractLineEdit.h  AbstractPluginDropdown.cpp  BaseLineEdit.h  Effect.h  EffectDropdown.cpp  EffectsList.cpp  InputDropdown.cpp  InputDropdown.h  InstrumentOption.h  OutputDropdown.cpp  OutputDropdown.h  PatchBay.ui  PatchBayItem.ui  Patchbay.cpp  Patchbay.h  PatchbayPlugin.cpp  PatchbayPlugin.h  SimpleChangeEvent.h  SingleInstrument.cpp  SingleInstrument.ui  TreeNode.cpp  TreeNode.h
src/qt/widget/: AboutDialog.cpp  AboutDialog.h  AbstractPluginDropdown.cpp  AbstractPluginDropdown.h  EffectDropdown.cpp  EffectDropdown.h  EffectsDropdown.h  EffectsList.cpp  EffectsList.h  InstrumentDropdown.cpp  InstrumentDropdown.h  InstrumentOption.h  PatchBay.ui  PatchBayItem.ui  Patchbay.cpp  Patchbay.h  PatchbayPlugin.cpp  PatchbayPlugin.h  SimpleChangeEvent.cpp  SimpleChangeEvent.h  SimpleLayout.cpp  SimpleLayout.h  SingleInstrument.cpp  SingleInstrument.h  SingleInstrument.ui
test/: CMakeLists.txt  Jack.cpp  LADSPA.cpp  LV2.cpp  jacktest  ladspalist  lv2list
test/CLI/: test_cli.cpp
test/CLI/include/: Argv.h
test/JSON/: json_test.cpp
test/Jack/: host_port_connect.cpp  host_port_register.cpp  host_port_unregister.cpp
test/Jack/include/: jack_defaults.h
test/Midi/: midi_note_frequency.cpp
test/Resources/: layout_save.json
(+54 files in other folders)
